--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ Variables
   --main-color:#17C6AA;
   --main-black:#282828;
   --star-rating-color:#FFD400;
+
+
+  --main-color-filter:invert(65%) sepia(63%) saturate(553%) hue-rotate(118deg) brightness(87%) contrast(90%);
+  --black-color-filter:invert(11%) sepia(0%) saturate(2599%) hue-rotate(315deg) brightness(90%) contrast(85%);;
+  --white-color-filter: invert(100%) sepia(3%) saturate(12%) hue-rotate(25deg) brightness(104%) contrast(104%);
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-2: hsl(211, 39%, 23%);
