--- a/src/index.css
+++ b/src/index.css
@@ -9,34 +9,14 @@ Variables
   --main-black:#282828;
   --star-rating-color:#FFD400;
   --gray:#8d92a3;
+  --site-spacing:0 10rem;
 
 
 
   --main-color-filter:invert(65%) sepia(63%) saturate(553%) hue-rotate(118deg) brightness(87%) contrast(90%);
   --black-color-filter:invert(11%) sepia(0%) saturate(2599%) hue-rotate(315deg) brightness(90%) contrast(85%);;
   --white-color-filter: invert(100%) sepia(3%) saturate(12%) hue-rotate(25deg) brightness(104%) contrast(104%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
-  --clr-white: #fff;
-  --clr-black: #222;
 
-  --transition: all 0.3s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  --max-width: 1170px;
-  --fixed-width: 620px;
 }
 /*
 =============== 
@@ -129,6 +109,23 @@ p {
 }
 
 
+@media screen and (max-width: 1440px) {
+  body {
+    --site-spacing:0 5rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    --site-spacing:0 1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    --site-spacing:0 0.5rem;
+  }
+}
 
 
 
