--- a/src/index.css
+++ b/src/index.css
@@ -31,16 +31,15 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  /* background: var(--clr-grey-10); */
   background:#fff;
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
-
-  /* overflow-x: hidden; */
+  max-width: 100%;
 }
 ul {
   list-style-type: none;
@@ -107,26 +106,6 @@ p {
     line-height: 1;
   }
 }
-
-
-@media screen and (max-width: 1440px) {
-  body {
-    --site-spacing:0 5rem;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  body {
-    --site-spacing:0 1rem;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  body {
-    --site-spacing:0 0.5rem;
-  }
-}
-
 
 
 
