--- a/src/index.css
+++ b/src/index.css
@@ -268,3 +268,45 @@ p {
 
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*main*/
+.main {
+  position:absolute;
+  background:rgba(0,0,0,0.5);
+  top:0;
+  width:100%;
+  height:100%;
+  left:0;
+  z-index:-998;
+  opacity:0;
+  transition:zIndex opacity 0.5s;
+}
+
+
+.main-container--opened {
+  z-index:998;
+  opacity:1;
+}
+
+.main-container--closed {
+  z-index:-998;
+  opacity:0;
+}
