--- a/src/index.css
+++ b/src/index.css
@@ -168,66 +168,6 @@ p {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*select*/
-.select-dropdown {
-  position: relative;
-  background-color: #F7F7F8;
-  width: auto;
-  float: left;
-  max-width: 100%;
-  border-radius: 2px;
-}
-.select-dropdown select {
-  font-family: "helvetica neue", helvetica;
-  font-size: 1rem;
-  font-weight: 200;
-  max-width: 100%;
-  padding: 8px 24px 8px 10px;
-  border: none;
-  background-color: transparent;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-
-  color:#505050;
-}
-.select-dropdown select:active, .select-dropdown select:focus {
-  outline: none;
-  box-shadow: none;
-}
-.select-dropdown:after {
-  content: " ";
-  position: absolute;
-  top: 50%;
-  margin-top: -2px;
-  right: 8px;
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #aaa;
-}
-
-
-
-
 @media only screen and (max-width:1920px) {
   body {
     --general-spacing:25rem;
@@ -261,19 +201,6 @@ p {
 
 
 
-
-
-/*checkboxes*/
-
-/* Customize the label (the container) */
-.checkbox-item {
-
-}
-
-.checkbox-item__input {
-
-}
-
-.checkbox-item__label {
-
+body {
+  overflow:hidden;
 }
